fixed styles applied to all elements

--- a/Cs2GlobalAdrTracker/Views/MainWindow.xaml
+++ b/Cs2GlobalAdrTracker/Views/MainWindow.xaml
@@ -54,7 +54,7 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 
-                <TextBlock Grid.Column="0" Grid.ColumnSpan="2" d:Text="   Current ADR: ##&#xA;Tracked games: ##" FontFamily="{StaticResource Stratum}" HorizontalAlignment="Center">
+                <TextBlock Style="{StaticResource TextBlockStandard}" Grid.Column="0" Grid.ColumnSpan="2" d:Text=" Current ADR: ##&#xA;Tracked games: ##" FontFamily="{StaticResource Stratum}" HorizontalAlignment="Center">
                     <TextBlock.Text>
                         <MultiBinding StringFormat="{}   Current ADR: {0:#.##} &#xA;Tracked games: {1}">
                             <Binding Path="CurrentAdr"/>
@@ -74,7 +74,7 @@
                     </Grid.RowDefinitions>
 
                     <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
-                        <Label  HorizontalAlignment="Right" Content="Add new ADR:" Margin="0,0,4,0"/>
+                        <Label Style="{StaticResource LabelStandard}" HorizontalAlignment="Right" Content="Add new ADR:" Margin="0,0,4,0"/>
                         <TextBox Text="{Binding InputAdr, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MinWidth="36" MaxLength="3">
                             <TextBox.InputBindings>
                                 <KeyBinding Key="Return" Command="{Binding AddCommand}" CommandParameter="{Binding Instance}"/>
@@ -84,7 +84,7 @@
 
                     <Button Grid.Row="1" HorizontalAlignment="Center" Margin="0,8,0,0" Padding="8,2,8,2" Content="Add" d:Visibility="Visible" Command="{Binding AddCommand}" CommandParameter="{Binding Instance}">
                         <Button.Style>
-                            <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="Button">
+                            <Style BasedOn="{StaticResource ButtonStandard}" TargetType="Button">
                                 <Style.Triggers>
                                     <MultiDataTrigger>
                                         <MultiDataTrigger.Conditions>
