--- a/Cs2GlobalAdrTracker/App.xaml
+++ b/Cs2GlobalAdrTracker/App.xaml
@@ -1,25 +1,24 @@
 ﻿<Application x:Class="Cs2GlobalAdrTracker.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Cs2GlobalAdrTracker"
              StartupUri="views/MainWindow.xaml">
     <Application.Resources>
 
         <FontFamily x:Key="Stratum">Resources/Fonts/#Stratum2 Rg</FontFamily>
         <FontFamily x:Key="StratumMedium">Resources/Fonts/#Stratum2 Md</FontFamily>
         <FontFamily x:Key="StratumBold">Resources/Fonts/#Stratum2 Bd</FontFamily>
-        
-        <Style TargetType="Label">
+
+        <Style x:Key="LabelStandard" TargetType="Label">
             <Setter Property="Foreground" Value="WhiteSmoke"/>
             <Setter Property="FontFamily" Value="{StaticResource Stratum}"/>
         </Style>
 
-        <Style TargetType="Button">
+        <Style x:Key="ButtonStandard" TargetType="Button">
             <Setter Property="Background" Value="#111111"/>
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
 
-        <Style TargetType="TextBlock">
+        <Style x:Key="TextBlockStandard" TargetType="TextBlock">
             <Setter Property="Foreground" Value="WhiteSmoke"/>
             <Setter Property="FontFamily" Value="{StaticResource Stratum}"/>
         </Style>
