--- a/Cs2GlobalAdrTracker/App.xaml
+++ b/Cs2GlobalAdrTracker/App.xaml
@@ -14,6 +14,7 @@
         </Style>
 
         <Style x:Key="ButtonStandard" TargetType="Button">
+            <Setter Property="Foreground" Value="WhiteSmoke"/>
             <Setter Property="Background" Value="#111111"/>
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
