--- a/Cs2GlobalAdrTracker/App.xaml
+++ b/Cs2GlobalAdrTracker/App.xaml
@@ -42,5 +42,53 @@
             <Setter Property="FontSize" Value="18"/>
         </Style>
 
+        <Style TargetType="Expander">
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="WhiteSmoke"/>
+            <Setter Property="FontFamily" Value="{StaticResource Stratum}"/>
+            <Setter Property="Focusable" Value="False"/>
+        </Style>
+
+        <Style TargetType="ListView">
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="WhiteSmoke"/>
+            <Setter Property="FontFamily" Value="{StaticResource Stratum}"/>
+            <Setter Property="Focusable" Value="False"/>
+        </Style>
+
+        <Style TargetType="ListViewItem">
+            <Setter Property="IsEnabled" Value="False"/>
+            
+            <Style.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Foreground" Value="WhiteSmoke"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style TargetType="GridViewColumnHeader">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="GridViewColumnHeader">
+                        <TextBlock Text="{TemplateBinding Content}" Padding="2" Width="{TemplateBinding Width}" TextAlignment="Center"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            
+            <Setter Property="IsEnabled" Value="False"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="FontFamily" Value="{StaticResource Stratum}"/>
+            
+            <Style.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Foreground" Value="WhiteSmoke"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
     </Application.Resources>
 </Application>
