--- a/Cs2GlobalAdrTracker/App.xaml
+++ b/Cs2GlobalAdrTracker/App.xaml
@@ -8,18 +8,56 @@
         <FontFamily x:Key="StratumMedium">Resources/Fonts/#Stratum2 Md</FontFamily>
         <FontFamily x:Key="StratumBold">Resources/Fonts/#Stratum2 Bd</FontFamily>
 
-        <Style x:Key="LabelStandard" TargetType="Label">
+        <Style TargetType="Label">
             <Setter Property="Foreground" Value="WhiteSmoke"/>
             <Setter Property="FontFamily" Value="{StaticResource Stratum}"/>
         </Style>
 
-        <Style x:Key="ButtonStandard" TargetType="Button">
+        <Style TargetType="Button">
+            <Setter Property="BorderBrush" Value="Black"/>
             <Setter Property="Foreground" Value="WhiteSmoke"/>
             <Setter Property="Background" Value="#111111"/>
             <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4,0,4,0"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="DarkGreen"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
 
-        <Style x:Key="TextBlockStandard" TargetType="TextBlock">
+        <Style x:Key="DeleteIcon" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+            <Setter Property="Margin" Value="0"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4,0,4,0"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="Foreground" Value="Red"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style TargetType="TextBlock">
             <Setter Property="Foreground" Value="WhiteSmoke"/>
             <Setter Property="FontFamily" Value="{StaticResource Stratum}"/>
         </Style>
@@ -56,16 +94,24 @@
             <Setter Property="Foreground" Value="WhiteSmoke"/>
             <Setter Property="FontFamily" Value="{StaticResource Stratum}"/>
             <Setter Property="Focusable" Value="False"/>
+            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
         </Style>
 
         <Style TargetType="ListViewItem">
-            <Setter Property="IsEnabled" Value="False"/>
-            
-            <Style.Triggers>
-                <Trigger Property="IsEnabled" Value="False">
-                    <Setter Property="Foreground" Value="WhiteSmoke"/>
-                </Trigger>
-            </Style.Triggers>
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListViewItem}">
+                        <Border BorderBrush="Transparent" BorderThickness="0" Background="{TemplateBinding Background}">
+                            <GridViewRowPresenter Grid.RowSpan="2"
+                                      Margin="{TemplateBinding Padding}"
+                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                      SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
 
         <Style TargetType="GridViewColumnHeader">
@@ -77,25 +123,12 @@
                 </Setter.Value>
             </Setter>
             
-            <Setter Property="IsEnabled" Value="False"/>
+            <Setter Property="Foreground" Value="WhiteSmoke"/>
             <Setter Property="BorderBrush" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="FontFamily" Value="{StaticResource Stratum}"/>
-            
-            <Style.Triggers>
-                <Trigger Property="IsEnabled" Value="False">
-                    <Setter Property="Foreground" Value="WhiteSmoke"/>
-                </Trigger>
-            </Style.Triggers>
         </Style>
-
-        <!--<Style TargetType="ComboBox">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="WhiteSmoke"/>
-            <Setter Property="BorderBrush" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
-        </Style>-->
 
         <Style TargetType="ComboBox">
             <Setter Property="Foreground" Value="WhiteSmoke"/>
